# vscode-gateway

./: .gitignore  AGENTS.md  Plan.md  README.md  design.md  pyproject.toml  review.md
deploy/: Caddyfile.example  vscode-gateway.service
e2e/: compose.yaml  test_api.py  test_dashboard.py  test_editor.py
scripts/: create-password-hash.py  verify-release.py
src/vscode_gateway/: __init__.py  app.py  auth.py  db.py  errors.py  host_trust.py  lockfile.py  models.py  proxy.py  readiness.py  routes.py  runtime.py  sessions.py  settings.py  ssh.py  ssh_config.py  ssh_connection.py  ssh_keys.py
src/vscode_gateway/migrations/: 001_initial.sql  002_ssh_redesign.sql
src/vscode_gateway/remote/: gateway-helper-v1.sh
src/vscode_gateway/static/: app.css  dashboard.js  keys.js  ssh_config.js
src/vscode_gateway/templates/: base.html  dashboard.html  keys.html  login.html  ssh_config.html
tests/: conftest.py
tests/integration/: test_api_localhost_ssh.py  test_open_close.py  test_proxy.py  test_recovery.py
tests/integration/fakes/: scp  ssh  ssh-keygen
tests/support/: session_harness.py
tests/unit/: ssh_backend_test_helpers.py  test_auth.py  test_auth_throttle.py  test_capacity.py  test_catalog.py  test_close_race.py  test_db.py  test_frontend_contract.py  test_host_trust_backend.py  test_open_lifecycle.py  test_proxy.py  test_proxy_headers.py  test_readiness.py  test_runtime_backend.py  test_sessions.py  test_singleton_lock.py  test_ssh_backend_routes.py  test_ssh_config_backend.py  test_ssh_connection_backend.py  test_ssh_keys_backend.py
