[project]
name = "vscode-gateway"
version = "0.1.0"
description = "OpenVSCode SSH Gateway — single-process gateway for remote OpenVSCode sessions"
requires-python = ">=3.13"
readme = "README.md"
license = { text = "MIT" }
dependencies = [
    "fastapi[standard]>=0.115",
    "uvicorn[standard]>=0.34",
    "jinja2>=3.1",
    "httpx>=0.28",
    "websockets>=14",
    "pydantic>=2.10",
    "pydantic-settings>=2.7",
    "pwdlib[argon2]>=0.3",
    "aiosqlite>=0.21",
    "itsdangerous>=2.2",
    "structlog>=24",
    "python-multipart>=0.0.20",
    "asyncssh>=2.17",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.26",
    "httpx>=0.28",
    "ruff>=0.9",
    "pyright>=1.1.390",
    "bandit>=1.8",
    "pip-audit>=2.8",
]

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = [
    "E", "F", "W",    # pycodestyle
    "I",               # isort
    "N",               # pep8-naming
    "UP",              # pyupgrade
    "B",               # flake8-bugbear
    "C4",              # flake8-comprehensions
    "SIM",             # flake8-simplify
    "RUF",             # ruff specific
]

[tool.ruff.lint.isort]
known-first-party = ["vscode_gateway"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pyright]
include = ["src", "tests"]
pythonVersion = "3.13"
typeCheckingMode = "strict"
reportMissingTypeStubs = false
# FastAPI route handlers and pytest test functions are effectively entry
# points decorated by their respective frameworks; pyright's
# reportUnusedFunction rule treats them as private unused functions. The
# check adds no value here.
reportUnusedFunction = "none"
venvPath = "."
venv = ".venv"

[tool.mypy]
strict = true
python_version = "3.13"
files = ["src", "tests"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: exercises the API against a real localhost SSH server",
    "real_editor: runs the opt-in integration case against a real OpenVSCode archive",
]

[build-system]
requires = ["hatchling>=1.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/vscode_gateway"]
